--- a/src/coin_trade.ipynb
+++ b/src/coin_trade.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,168 +26,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "환경변수오류. 환경변수를 바꾸고 다시 실행하거나 set_login_key()를 실행해주세요\n",
+      "로그인 오류. set_login_key를 다시 해주세요\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'coin_trade' object has no attribute 'login'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-90-a41e6d5f508e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    109\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m \u001b[0mct\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcoin_trade\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 111\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mct\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_KRW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m \u001b[0mct\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_current_price\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[0mct\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_coin_key\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"KRW-DOGE\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-90-a41e6d5f508e>\u001b[0m in \u001b[0;36mget_KRW\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     51\u001b[0m     \u001b[1;31m# 한화 잔고 조회\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_KRW\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 53\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_balance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"KRW\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m     \u001b[1;31m# 간단한 변동성 돌파 전략으로 매수 목표가 조회\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-90-a41e6d5f508e>\u001b[0m in \u001b[0;36mget_balance\u001b[1;34m(self, ticker)\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[1;31m# 잔고 조회\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mget_balance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 42\u001b[1;33m         \u001b[0mbalances\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlogin\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_balances\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     43\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mb\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbalances\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     44\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'currency'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mticker\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'coin_trade' object has no attribute 'login'"
+     ]
+    }
+   ],
    "source": [
     "import time \n",
     "import pyupbit\n",
     "import pandas as pd\n",
-    "import datetime\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "access = input() # 발급받은 엑세스키(개인)\n",
-    "secret = input() # 발급받은 시크릿키 입력 (개인)\n",
-    "login = pyupbit.Upbit(access, secret)\n",
+    "import datetime\n",
+    "import os\n",
     "\n",
-    "balance_df = pd.DataFrame(login.get_balances()) # 암호화폐 잔고 조회\n",
+    "class coin_trade:\n",
+    "    # 생성자\n",
+    "    def __init__(self):\n",
+    "        try:\n",
+    "            access = os.environ['UPBIT_OPEN_API_ACCESS_KEY']\n",
+    "            secret = os.environ['UPBIT_OPEN_API_SECRET_KEY']\n",
+    "            self.login = pyupbit.Upbit(access, secret)\n",
+    "        except:\n",
+    "            print(\"환경변수오류. 환경변수를 바꾸고 다시 실행하거나 set_login_key()를 실행해주세요\")    \n",
+    "        try:\n",
+    "            balance_df = pd.DataFrame(self.login.get_balances()) # 암호화폐 잔고 조회\n",
+    "            print(balance_df) \n",
+    "        except:\n",
+    "            print(\"로그인 오류. set_login_key를 다시 해주세요\")\n",
     "\n",
-    "print(balance_df) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "upbit = pyupbit.Upbit(access, secret)\n",
+    "    # 로그인 실패시 새로운 키 설정\n",
+    "    def set_login_key(self, accessKey, secretKey):\n",
+    "        access = accessKey\n",
+    "        secret = secretKey\n",
+    "        self.login = pyupbit.Upbit(access, secret)\n",
+    "        try:\n",
+    "            balance_df = pd.DataFrame(self.login.get_balances()) # 암호화폐 잔고 조회\n",
+    "            print(balance_df) \n",
+    "            return 0\n",
+    "        except:\n",
+    "            print(\"로그인 오류. set_login_key를 다시 해주세요\")\n",
+    "            return 1\n",
     "\n",
-    "def get_target_price(ticker, k):\n",
-    "    \"\"\"변동성 돌파 전략으로 매수 목표가 조회\"\"\"\n",
-    "    df = pyupbit.get_ohlcv(ticker, interval=\"day\", count=2)\n",
-    "    target_price = df.iloc[0]['close'] + (df.iloc[0]['high'] - df.iloc[0]['low']) * k\n",
-    "    return target_price\n",
+    "    # 코인 종목 변경. 디폴트는 KRW-BTC (비트코인)\n",
+    "    def set_coin_key(self, coinName):\n",
+    "        self.coinKey = coinName\n",
     "\n",
-    "def get_start_time(ticker):\n",
-    "    \"\"\"시작 시간 조회\"\"\"\n",
-    "    df = pyupbit.get_ohlcv(ticker, interval=\"day\", count=1)\n",
-    "    start_time = df.index[0]\n",
-    "    return start_time\n",
     "\n",
-    "def get_balance(ticker):\n",
-    "    \"\"\"잔고 조회\"\"\"\n",
-    "    balances = upbit.get_balances()\n",
-    "    for b in balances:\n",
-    "        if b['currency'] == ticker:\n",
-    "            if b['balance'] is not None:\n",
-    "                return float(b['balance'])\n",
-    "            else:\n",
-    "                return 0\n",
-    "    return 0\n",
+    "    # 잔고 조회\n",
+    "    def get_balance(self, ticker):\n",
+    "        balances = self.login.get_balances()\n",
+    "        for b in balances:\n",
+    "            if b['currency'] == ticker:\n",
+    "                if b['balance'] is not None:\n",
+    "                    return float(b['balance'])\n",
+    "                else:\n",
+    "                    return 0\n",
+    "        return 0\n",
+    "\n",
+    "    # 한화 잔고 조회   \n",
+    "    def get_KRW(self):\n",
+    "        return self.get_balance(\"KRW\")\n",
+    "\n",
+    "    # 간단한 변동성 돌파 전략으로 매수 목표가 조회\n",
+    "    def get_target_price(self, k):\n",
+    "        ticker = self.coinKey\n",
+    "        df = pyupbit.get_ohlcv(ticker, interval=\"day\", count=2)\n",
+    "        target_price = df.iloc[0]['close'] + (df.iloc[0]['high'] - df.iloc[0]['low']) * k\n",
+    "        return target_price\n",
+    "\n",
+    "    # 시작 시간 조회\n",
+    "    def get_start_time(self):\n",
+    "        ticker = self.coinKey\n",
+    "        df = pyupbit.get_ohlcv(ticker, interval=\"day\", count=1)\n",
+    "        start_time = df.index[0]\n",
+    "        return start_time\n",
     "\n",
     "    \n",
-    "def get_current_price(ticker):\n",
-    "    \"\"\"현재가 조회\"\"\"\n",
-    "    return pyupbit.get_orderbook(ticker=ticker)[\"orderbook_units\"][0][\"ask_price\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6000.0\n",
-      "184.0\n",
-      "185.5\n",
-      "400\n",
-      "최소주문금액 이상으로 주문해주세요\n",
-      "under_min_total_bid\n",
-      "UpbitError\n",
-      "6000.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "krw = get_balance(\"KRW\") # 계좌 내 한화 잔금\n",
+    "    # 현재가 조회\n",
+    "    def get_current_price(self):\n",
+    "        ticker = self.coinKey\n",
+    "        return pyupbit.get_orderbook(ticker=ticker)[\"orderbook_units\"][0][\"ask_price\"]\n",
     "\n",
-    "target_price = get_target_price(\"KRW-DOGE\", 0.5)\n",
+    "    # 코인 사기 (가격)\n",
+    "    def buy_coin(self, price):\n",
+    "        self.login.buy_market_order(self.coinKey, price)\n",
     "\n",
-    "current_price = get_current_price(\"KRW-DOGE\")\n",
+    "    # 코인 팔기 (가격)\n",
+    "    def sell_coin(self, price):\n",
+    "        self.login.buy_market_order(self.coinKey, price)\n",
     "\n",
-    "print(krw)\n",
-    "print(current_price)\n",
-    "print(target_price)\n",
-    "# 모든 코인 최소 주문금액 5천원임\n",
-    "upbit.buy_market_order(\"KRW-DOGE\", 1100)\n",
+    "    # 간단한 봇 예시\n",
+    "    def start_bot(self):\n",
+    "            \n",
+    "        while True:\n",
+    "            try:\n",
+    "                now = datetime.datetime.now()\n",
+    "                start_time = self.get_start_time()\n",
+    "                end_time = start_time + datetime.timedelta(days=1)\n",
     "\n",
-    "print(krw)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 'datetime' is not defined\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-21f081832567>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m         \u001b[0mnow\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdatetime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mget_start_time\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"KRW-BTC\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'datetime' is not defined",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-21f081832567>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "#케이뱅크 계좌 연동 필요\n",
+    "                if start_time < now < end_time - datetime.timedelta(seconds=10):\n",
+    "                    target_price = self.get_target_price(0.5)\n",
+    "                    current_price = self.get_current_price()\n",
+    "                    if target_price < current_price:\n",
+    "                        krw = self.get_KRW()\n",
+    "                        if krw > 5000:\n",
+    "                            self.buy_coin(krw*0.9995)\n",
+    "                            print(\"bought\", self.coinKey,\"with\", krw*0.9995 )\n",
+    "                else:\n",
+    "                    btc = self.get_balance(\"BTC\")\n",
+    "                    if btc > 0.00008:\n",
+    "                        self.sell_coin(btc*0.9995)\n",
+    "                        print(\"selled\", self.coinKey,\"for\", btc*0.9995 )\n",
+    "                time.sleep(1)\n",
+    "            except Exception as e:\n",
+    "                print(e)\n",
+    "                time.sleep(1)\n",
     "\n",
-    "while True:\n",
-    "    try:\n",
-    "        now = datetime.datetime.now()\n",
-    "        start_time = get_start_time(\"KRW-BTC\")\n",
-    "        end_time = start_time + datetime.timedelta(days=1)\n",
-    "\n",
-    "        if start_time < now < end_time - datetime.timedelta(seconds=10):\n",
-    "            target_price = get_target_price(\"KRW-BTC\", 0.5)\n",
-    "            current_price = get_current_price(\"KRW-BTC\")\n",
-    "            if target_price < current_price:\n",
-    "                krw = get_balance(\"KRW\")\n",
-    "                if krw > 5000:\n",
-    "                    upbit.buy_market_order(\"KRW-BTC\", krw*0.9995)\n",
-    "                    print(\"bought KRW-BTC with \", krw*0.9995 )\n",
-    "        else:\n",
-    "            btc = get_balance(\"BTC\")\n",
-    "            if btc > 0.00008:\n",
-    "                upbit.sell_market_order(\"KRW-BTC\", btc*0.9995)\n",
-    "                print(\"selled KRW-BTC for \", krw*0.9995 )\n",
-    "        time.sleep(1)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        time.sleep(1)"
+    "ct = coin_trade()\n",
+    "print(ct.get_KRW())\n",
+    "ct.get_current_price()\n",
+    "ct.set_coin_key(\"KRW-DOGE\")\n",
+    "ct.get_current_price()\n",
+    "ct.start_bot()"
    ]
   },
   {
@@ -198,10 +177,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "9d3bae0a0f66551680ef8a166f6b92cc2774d5d7901f027deb7bb883ed06d5ae"
+   "hash": "f7b6bb42013a5637481957308d5a7306471b0750c3dc1fade55b6a2f7e8aac12"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.6.8 64-bit",
    "name": "python3"
   },
   "language_info": {
@@ -214,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
